# ffos-user

./: .gitignore  .golangci.yml  AGENTS.md  Makefile  PLANS.md  README.md
.cursor/agents/: go-rust-maintainer.md  planner-researcher.md  reviewer.md
.cursor/rules/: 00-repository-contract.mdc  api-design-tbd.mdc  (+8 more)
.github/: lint-app-monitord.yaml  lint-connectd.yaml  lint-setupd.yaml  lint-watchdog.yaml  pull_request_template.md  test-app-monitord.yaml  test-connectd.yaml  test-setupd.yaml  test-sys-monitord.yaml  test-watchdog.yaml
components/: Makefile
components/feral-setupd/: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  build.rs  makefile  rustfmt.toml
components/feral-setupd/scripts/: bytes-command.sh  debug.sh  fresh-debug.sh  fresh-release.sh  restart-bluetooth.sh  resume-debug.sh  resume-release.sh  start-silent-after-15s.sh  sync-to-x4.sh
components/feral-setupd/src/: app_state.rs  ble.rs  cache.rs  callbacks.rs  cdp.rs  cfg.rs  command.rs  connectivity.rs  constant.rs  dbus_client.rs  dbus_handlers.rs  dbus_utils.rs  encoding.rs  lib.rs  log_uploader.rs  main.rs  persistent_state.rs  phase_logic.rs  setup_lifecycle.rs  startup.rs  system.rs  ui.rs  update_coordinator.rs  updater.rs  webapp.rs  wifi_utils.rs
components/feral-setupd/tests/: integration_test.rs
docs/: api-design-tbd.md  api-design.md  architecture-tbd.md  architecture.md  controld-inbound-controller-messages.md  feral-setupd-flow.md
prompts/: code-review.md
scripts/: test-mint-pairing-ui.sh  test-serve-feral-player.sh  test-start-kiosk.sh  verify-setupd-docker.sh
(+445 files in other folders)
